--- a/email-verified.html
+++ b/email-verified.html
@@ -140,11 +140,11 @@
           /></a>
           <a href="#"
             ><img
-              src="https://i.ibb.co/61p5vbj/instagram-167-svgrepo-com.png"
+              src="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
               alt="Instagram"
               target="_blank"
           /></a>
-          <a href="#"
+          <a href="https://www.linkedin.com/company/msp-solution-pvt-ltd/"
             ><img
               src="https://i.ibb.co/252xfLW/linkedin-161-svgrepo-com.png"
               alt="LinkedIn"
