--- a/error.html
+++ b/error.html
@@ -135,20 +135,18 @@
           /></a>
           <a href="#"
             ><img
-              src="https://i.ibb.co/61p5vbj/instagram-167-svgrepo-com.png"
+              src="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
               alt="Instagram"
               target="_blank"
           /></a>
-          <a href="#"
+          <a href="https://www.linkedin.com/company/msp-solution-pvt-ltd/"
             ><img
               src="https://i.ibb.co/252xfLW/linkedin-161-svgrepo-com.png"
               alt="LinkedIn"
               target="_blank"
           /></a>
         </div>
-        <p>
-          © 2024 - 2024. <a href="https://www.mspacademy.com">MspAcademy.com</a>
-        </p>
+        <p>© 2024 - 2024. MspAcademy.com</p>
       </div>
     </div>
   </body>
