--- a/project-accepted.html
+++ b/project-accepted.html
@@ -104,20 +104,25 @@
       <div class="footer">
         <p>Follow us on</p>
         <div class="social-icons">
-          <a href="#"
+          <a
+            href="https://www.facebook.com/profile.php?id=61563941840402"
+            target="_blank"
             ><img
               src="https://i.ibb.co/j87g9wq/facebook-svgrepo-com.png"
               alt="Facebook"
+              target="_blank"
           /></a>
           <a href="#"
             ><img
-              src="https://i.ibb.co/61p5vbj/instagram-167-svgrepo-com.png"
+              src="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
               alt="Instagram"
+              target="_blank"
           /></a>
-          <a href="#"
+          <a href="https://www.linkedin.com/company/msp-solution-pvt-ltd/"
             ><img
               src="https://i.ibb.co/252xfLW/linkedin-161-svgrepo-com.png"
               alt="LinkedIn"
+              target="_blank"
           /></a>
         </div>
         <p>© 2024 - 2024. MspAcademy.com</p>
