--- a/MSP_verifyEmail.html
+++ b/MSP_verifyEmail.html
@@ -115,10 +115,7 @@
       </div>
       <p>Dear [name],</p>
 
-      <p>
-        Welcome to MSP Academy. Your email has been verified. you can now log
-        in!
-      </p>
+      <p>[body]</p>
 
       <p>Thanks & Regards<br />Team MSP Academy</p>
       <div class="logo">
