--- a/MSP_passwordNotification.html
+++ b/MSP_passwordNotification.html
@@ -72,23 +72,6 @@
         width: 100px;
       }
 
-      .tick {
-        display: flex;
-        justify-content: center;
-      }
-
-      .tick i {
-        color: white;
-        background-color: var(--primary);
-        border-radius: 50%;
-        padding: 1.5rem;
-        font-size: x-large;
-      }
-
-      .tick i:hover {
-        opacity: 0.9;
-      }
-
       .center {
         display: flex;
         justify-content: center;
@@ -110,26 +93,18 @@
   <body>
     <div class="email-container">
       <h1 class="center">[subject]</h1>
-      <div class="tick">
-        <i class="fa fa-check" aria-hidden="true"></i>
-      </div>
-      <p>Dear [name],</p>
-      <p>Congratulations!</p>
 
-      <p>
-        Your Project has been completed successfully for the demo assignment. If
-        you have any issue regarding the assignment you can contact with us.
-      </p>
+      <p>Dear [name],</p>
+
+      <p>[message]</p>
 
       <p>Thanks & Regards<br />Team MSP Academy</p>
-
       <div class="logo">
         <img
           src="https://i.ibb.co/K6kprS9/MSPLogo.png"
           alt="MSP Academy Logo"
         />
       </div>
-
       <div class="footer">
         <p>Follow us on</p>
         <div class="social-icons">
