--- a/MSP_projectCompleted.html
+++ b/MSP_projectCompleted.html
@@ -72,6 +72,23 @@
         width: 100px;
       }
 
+      .tick {
+        display: flex;
+        justify-content: center;
+      }
+
+      .tick i {
+        color: white;
+        background-color: var(--primary);
+        border-radius: 50%;
+        padding: 1.5rem;
+        font-size: x-large;
+      }
+
+      .tick i:hover {
+        opacity: 0.9;
+      }
+
       .center {
         display: flex;
         justify-content: center;
@@ -93,21 +110,23 @@
   <body>
     <div class="email-container">
       <h1 class="center">[subject]</h1>
-
+      <div class="tick">
+        <i class="fa fa-check" aria-hidden="true"></i>
+      </div>
       <p>Dear [name],</p>
+      <p>Congratulations!</p>
 
-      <p>
-        Your password has been successfully changed. If you did not make this
-        change, please contact our help and support team immediately.
-      </p>
+      <p>[message]</p>
 
       <p>Thanks & Regards<br />Team MSP Academy</p>
+
       <div class="logo">
         <img
           src="https://i.ibb.co/K6kprS9/MSPLogo.png"
           alt="MSP Academy Logo"
         />
       </div>
+
       <div class="footer">
         <p>Follow us on</p>
         <div class="social-icons">
