--- a/MSP_verifyEmail.html
+++ b/MSP_verifyEmail.html
@@ -135,9 +135,10 @@
               alt="Facebook"
               target="_blank"
           /></a>
-          <a href="#"
+          <a
+            href="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
             ><img
-              src="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
+              src="https://i.ibb.co/BNTWb33/instagram-167-svgrepo-com.png"
               alt="Instagram"
               target="_blank"
           /></a>
