--- a/MSP_projectCompleted.html
+++ b/MSP_projectCompleted.html
@@ -136,20 +136,20 @@
             ><img
               src="https://i.ibb.co/j87g9wq/facebook-svgrepo-com.png"
               alt="Facebook"
-              target="_blank"
           /></a>
           <a
             href="https://www.instagram.com/mspacademy.co?igsh=MTR1ODYwNnBpdXV0cQ%3D%3D"
+            target="_blank"
             ><img
               src="https://i.ibb.co/BNTWb33/instagram-167-svgrepo-com.png"
               alt="Instagram"
-              target="_blank"
           /></a>
-          <a href="https://www.linkedin.com/company/msp-solution-pvt-ltd/"
+          <a
+            href="https://www.linkedin.com/company/msp-solution-pvt-ltd/"
+            target="_blank"
             ><img
               src="https://i.ibb.co/252xfLW/linkedin-161-svgrepo-com.png"
               alt="LinkedIn"
-              target="_blank"
           /></a>
         </div>
         <p>© 2024 - 2024. MspAcademy.com</p>
