--- a/MSP_emailVerified.html
+++ b/MSP_emailVerified.html
@@ -23,6 +23,7 @@
       }
       :root {
         --primary: #ea580c;
+        --secondary: #090f3a;
       }
       .email-container {
         width: 100%;
@@ -100,6 +101,10 @@
         font-size: large;
       }
 
+      .weight-500 {
+        font-weight: 500;
+      }
+
       @media only screen and (max-width: 600px) {
         h1 {
           font-size: 22px;
@@ -119,10 +124,14 @@
       <div class="tick">
         <i class="fa fa-check" aria-hidden="true"></i>
       </div>
-      <p class="center welcome">
-        Welcome to MSP ASSIGNMENT you can now log in!
+      <p>Dear [name],</p>
+      <p class="weight-500">
+        Welcome to MSP Academy. Your email has been verified. You can now log
+        in!
       </p>
-      <div class="logo center">
+      <p>Thanks & Regards<br />Team MSP Academy</p>
+
+      <div class="logo">
         <img
           src="https://i.ibb.co/K6kprS9/MSPLogo.png"
           alt="MSP Academy Logo"
